Update: Attach API to Product Details and Cart Page
